# practiseC

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Makefile  sum.c  sum.h
src/: Makefile  sum  test.c
vsconfig/: c_cpp_properties.json  settings.json  tasks.json
